@startuml
top to bottom direction
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor STORAGE_COLOR
skinparam classBackgroundColor STORAGE_COLOR

package Storage as StoragePackage {

    class StorageManager

    package "UserPrefs Storage" #F4F6F6 {
        interface UserPrefsStorage
        class JsonUserPrefsStorage
        JsonUserPrefsStorage -up-|> UserPrefsStorage
    }

    package "AddressBook Storage" #F4F6F6 {
        interface AddressBookStorage
        class JsonAddressBookStorage
        class JsonSerializableAddressBook
        class JsonAdaptedPerson
        class JsonAdaptedTag
        class JsonAdaptedClassGroup
        class JsonAdaptedAssignment
        class JsonAdaptedAssignmentWrapper

        JsonAddressBookStorage -up-|> AddressBookStorage
        JsonAddressBookStorage ..> JsonSerializableAddressBook
        JsonSerializableAddressBook --> "*" JsonAdaptedPerson
        JsonAdaptedPerson --> "*" JsonAdaptedTag
        JsonAdaptedPerson --> "*" JsonAdaptedClassGroup
        JsonAdaptedPerson --> "*" JsonAdaptedAssignment
        JsonAdaptedAssignment ..> JsonAdaptedAssignmentWrapper : uses >
    }

    package "CommandHistory Storage" #F4F6F6 {
        interface CommandHistoryStorage
        class TxtCommandHistoryStorage
        TxtCommandHistoryStorage -up-|> CommandHistoryStorage
    }

    interface Storage
    Storage -left-|> UserPrefsStorage
    Storage -right-|> AddressBookStorage
    Storage -|> CommandHistoryStorage
    StorageManager .up.|> Storage

    StorageManager -down-> "1" UserPrefsStorage
    StorageManager -down-> "1" AddressBookStorage
    StorageManager -down-> "1" CommandHistoryStorage

    class HiddenOutside #FFFFFF
    HiddenOutside ..> Storage
}
@enduml

